--- a/views/payment.html
+++ b/views/payment.html
@@ -231,7 +231,37 @@
         </div>
     </div>
 
-    <script src="/controller/payment.js"></script>
+    <div class="out">
+        <div class="fire">
+            <div class="fire-left">
+                <div class="main-fire"></div>
+                <div class="particle-fire"></div>
+            </div>
+            <div class="fire-center">
+                <div class="main-fire"></div>
+                <div class="particle-fire"></div>
+            </div>
+            <div class="fire-right">
+                <div class="main-fire"></div>
+                <div class="particle-fire"></div>
+            </div>
+            <div class="fire-bottom">
+                <div class="main-fire"></div>
+            </div>
+        </div>
+        <div class="text_out">
+            <h1>Inicia sesion</h1>
+            <p>No has iniciado sesion de manera correcta</p>
+            <a href="/index.html">Iniciar sesion</a>
+        </div>
+    </div>
+
+    <div class="toast">
+        <i class="fa-solid fa-triangle-exclamation fa-shake"></i>
+        <p class="p_toast"></p>
+    </div>
+
+    <script type="module" src="/controller/payment.js"></script>
 </body>
 
 </html>
