--- a/views/settings.html
+++ b/views/settings.html
@@ -63,6 +63,32 @@
                 </div>
             </div>
         </div>
-        <script src="/controller/settings.js"></script>
+
+        <div class="out">
+            <div class="fire">
+                <div class="fire-left">
+                    <div class="main-fire"></div>
+                    <div class="particle-fire"></div>
+                </div>
+                <div class="fire-center">
+                    <div class="main-fire"></div>
+                    <div class="particle-fire"></div>
+                </div>
+                <div class="fire-right">
+                    <div class="main-fire"></div>
+                    <div class="particle-fire"></div>
+                </div>
+                <div class="fire-bottom">
+                    <div class="main-fire"></div>
+                </div>
+            </div>
+            <div class="text_out">
+                <h1>Inicia sesion</h1>
+                <p>No has iniciado sesion de manera correcta</p>
+                <a href="/index.html">Iniciar sesion</a>
+            </div>
+        </div>
+
+        <script type="module" src="/controller/settings.js"></script>
     </body>
 </html>
