--- a/styles/settings.css
+++ b/styles/settings.css
@@ -78,7 +78,7 @@ body {
     justify-content: center;
 }
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -86,7 +86,7 @@ body {
     color: var(--color-black);
 }
 
-.container .top{
+.container .top {
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -96,23 +96,23 @@ body {
     box-shadow: var(--box-shadow);
 }
 
-.container .top img{
+.container .top img {
     aspect-ratio: 1/1;
     object-fit: cover;
     width: 150px;
     border-radius: 50%;
 }
 
-.container .top h1{
+.container .top h1 {
     font-size: 30px;
     font-weight: 900;
 }
 
-.container .top p{
+.container .top p {
     font-size: 15px;
 }
 
-.container .content{
+.container .content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -122,7 +122,7 @@ body {
     box-shadow: var(--box-shadow);
 }
 
-.container .content .top_content{
+.container .content .top_content {
     width: 100%;
     padding: 3rem 2rem 1.5rem;
     display: flex;
@@ -131,12 +131,12 @@ body {
     cursor: pointer;
 }
 
-.container .content .top_content .text_top-content{
+.container .content .top_content .text_top-content {
     flex-grow: 1;
     margin-left: 1rem;
 }
 
-.container .content .top_content i:first-child{
+.container .content .top_content i:first-child {
     height: 70px;
     width: 70px;
     display: flex;
@@ -148,23 +148,23 @@ body {
 }
 
 .container .content .top_content i,
-.container .content .bottom_content i{
+.container .content .bottom_content i {
     transition: all .2s ease;
     flex: 0 0 auto;
 }
 
 .container .content .top_content:hover i:last-child,
-.container .content .bottom_content:hover i:last-child{
+.container .content .bottom_content:hover i:last-child {
     transform: rotate(90deg);
 }
 
 .container .content .top_content:hover i:first-child,
-.container .content .bottom_content:hover i:first-child{
+.container .content .bottom_content:hover i:first-child {
     background-color: var(--color-black);
     color: var(--color-white);
 }
 
-.container .content .bottom_content{
+.container .content .bottom_content {
     width: 100%;
     padding: 3rem 2rem;
     display: flex;
@@ -173,12 +173,12 @@ body {
     justify-content: space-between;
 }
 
-.container .content .bottom_content .text_bottom-content{
+.container .content .bottom_content .text_bottom-content {
     flex-grow: 1;
     margin-left: 1rem;
 }
 
-.container .content .bottom_content i:first-child{
+.container .content .bottom_content i:first-child {
     height: 70px;
     width: 70px;
     display: flex;
@@ -200,7 +200,8 @@ body {
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.124);
     backdrop-filter: blur(10px);
-    animation: blurOut 1s forwards; transition: bottom 0.4s ease;
+    animation: blurOut 1s forwards;
+    transition: bottom 0.4s ease;
 }
 
 .container_change-info.visible {
@@ -208,7 +209,7 @@ body {
     animation: blur 1s forwards;
 }
 
-.container_change-info .change_info{
+.container_change-info .change_info {
     background-color: var(--color-white);
     border-radius: 20px 20px 0 0;
     box-shadow: var(--box-shadow);
@@ -220,18 +221,18 @@ body {
     position: relative;
 }
 
-.container_change-info .change_info span{
+.container_change-info .change_info span {
     display: block;
     background-color: var(--color-grey);
     height: 3px;
     width: 50px;
     border-radius: 100px;
     position: absolute;
-    top: 40px;  
+    top: 40px;
 }
 
 
-.container_change-info .change_info .content_change-info{
+.container_change-info .change_info .content_change-info {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -240,7 +241,7 @@ body {
     width: 100%;
 }
 
-.container_change-info .change_info .content_change-info img{
+.container_change-info .change_info .content_change-info img {
     aspect-ratio: 1/1;
     object-fit: cover;
     width: 150px;
@@ -248,7 +249,7 @@ body {
     margin-bottom: 1rem;
 }
 
-.container_change-info .change_info .content_change-info input{
+.container_change-info .change_info .content_change-info input {
     width: 80%;
     padding: 1rem .7rem;
     margin-bottom: .5rem;
@@ -257,7 +258,7 @@ body {
     outline: none;
 }
 
-.container_change-info .change_info .content_change-info a{
+.container_change-info .change_info .content_change-info a {
     width: 60%;
     padding: 1rem 2rem;
     margin-top: 1rem;
@@ -272,12 +273,12 @@ body {
     transition: all .2s ease;
 }
 
-.container_change-info .change_info .content_change-info a:hover{
+.container_change-info .change_info .content_change-info a:hover {
     scale: 1.05;
 }
 
 
-                                /*CAMBIO CONTRASEÑA*/
+/*CAMBIO CONTRASEÑA*/
 
 
 .container_change-contra {
@@ -300,7 +301,7 @@ body {
     animation: blur 1s forwards;
 }
 
-.container_change-contra .change_contra{
+.container_change-contra .change_contra {
     background-color: var(--color-white);
     border-radius: 20px 20px 0 0;
     box-shadow: var(--box-shadow);
@@ -312,18 +313,18 @@ body {
     position: relative;
 }
 
-.container_change-contra .change_contra span{
+.container_change-contra .change_contra span {
     display: block;
     background-color: var(--color-grey);
     height: 3px;
     width: 50px;
     border-radius: 100px;
     position: absolute;
-    top: 40px;  
+    top: 40px;
 }
 
 
-.container_change-contra .change_contra .content_change-contra{
+.container_change-contra .change_contra .content_change-contra {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -332,14 +333,14 @@ body {
     width: 100%;
 }
 
-.container_change-contra .change_contra .content_change-contra i{
+.container_change-contra .change_contra .content_change-contra i {
     font-size: 50px;
     border-radius: 100%;
     margin-bottom: 3rem;
     color: var(--color-black);
 }
 
-.container_change-contra .change_contra .content_change-contra input{
+.container_change-contra .change_contra .content_change-contra input {
     width: 80%;
     padding: 1rem .7rem;
     margin-bottom: .5rem;
@@ -348,7 +349,7 @@ body {
     outline: none;
 }
 
-.container_change-contra .change_contra .content_change-contra a{
+.container_change-contra .change_contra .content_change-contra a {
     width: 60%;
     padding: 1rem 2rem;
     margin-top: 1rem;
@@ -363,34 +364,294 @@ body {
     transition: all .2s ease;
 }
 
-.container_change-contra .change_contra .content_change-contra a:hover{
+.container_change-contra .change_contra .content_change-contra a:hover {
     scale: 1.05;
 }
 
+.fire {
+    position: absolute;
+    top: calc(50% - 25px);
+    left: calc(50% - 25px);
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@keyframes scaleUpDown {
+
+    0%,
+    100% {
+        transform: scaleY(1) scaleX(1);
+    }
+
+    50%,
+    90% {
+        transform: scaleY(1.1);
+    }
+
+    75% {
+        transform: scaleY(0.95);
+    }
+
+    80% {
+        transform: scaleX(0.95);
+    }
+}
+
+@keyframes shake {
+
+    0%,
+    100% {
+        transform: skewX(0) scale(1);
+    }
+
+    50% {
+        transform: skewX(5deg) scale(0.9);
+    }
+}
+
+@keyframes particleUp {
+    0% {
+        opacity: 0;
+    }
+
+    20% {
+        opacity: 1;
+    }
+
+    80% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        top: -100%;
+        transform: scale(0.5);
+    }
+}
+
+@keyframes glow {
+
+    0%,
+    100% {
+        background-color: #ff1e1e;
+    }
+
+    50% {
+        background-color: #ff1e1e;
+    }
+}
+
+.fire {
+    position: absolute;
+    top: calc(50% - 25px);
+    left: calc(50% - 25px);
+    width: 50px;
+    /* Reduced size by 50% */
+    height: 50px;
+    /* Reduced size by 50% */
+    background-color: transparent;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -2rem;
+}
+
+.fire-center {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    animation: scaleUpDown 3s ease-out;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+}
+
+.fire-center .main-fire {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: radial-gradient(farthest-corner at 10px 0,
+            #ff1e1e 0%,
+            #ff1e1e 95%);
+    transform: scaleX(0.8) rotate(45deg);
+    border-radius: 0 40% 60% 40%;
+    filter: drop-shadow(0 0 10px #ff1e1e);
+}
+
+.fire-center .particle-fire {
+    position: absolute;
+    top: 60%;
+    left: 45%;
+    width: 10px;
+    height: 10px;
+    background-color: #ff1e1e;
+    border-radius: 50%;
+    filter: drop-shadow(0 0 10px #d43322);
+    animation: particleUp 2s ease-out 0;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+}
+
+.fire-right {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    animation: shake 2s ease-out 0;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+}
+
+.fire-right .main-fire {
+    position: absolute;
+    top: 15%;
+    right: -25%;
+    width: 80%;
+    height: 80%;
+    background-color: #ff1e1e;
+    transform: scaleX(0.8) rotate(45deg);
+    border-radius: 0 40% 60% 40%;
+    filter: drop-shadow(0 0 10px #ff1e1e);
+}
+
+.fire-right .particle-fire {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    width: 15px;
+    height: 15px;
+    background-color: #ff1e1e;
+    transform: scaleX(0.8) rotate(45deg);
+    border-radius: 50%;
+    filter: drop-shadow(0 0 10px #ff1e1e);
+    animation: particleUp 2s ease-out 0;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+}
+
+.fire-left {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    animation: shake 3s ease-out 0;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+}
+
+.fire-left .main-fire {
+    position: absolute;
+    top: 15%;
+    left: -20%;
+    width: 80%;
+    height: 80%;
+    background-color: #ff1e1e;
+    transform: scaleX(0.8) rotate(45deg);
+    border-radius: 0 40% 60% 40%;
+    filter: drop-shadow(0 0 10px #ff1e1e);
+}
+
+.fire-left .particle-fire {
+    position: absolute;
+    top: 10%;
+    left: 20%;
+    width: 10%;
+    height: 10%;
+    background-color: #ff1e1e;
+    border-radius: 50%;
+    filter: drop-shadow(0 0 10px #d43322);
+    animation: particleUp 3s infinite ease-out 0;
+    animation-fill-mode: both;
+}
+
+.fire-bottom .main-fire {
+    position: absolute;
+    top: 30%;
+    left: 20%;
+    width: 75%;
+    height: 75%;
+    background-color: #ff1e1e;
+    transform: scaleX(0.8) rotate(45deg);
+    border-radius: 0 40% 100% 40%;
+    filter: blur(10px);
+    animation: glow 2s ease-out 0;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+}
+
+.out {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000;
+    z-index: 10000000;
+    display: none;
+}
+
+.out.active {
+    display: flex;
+}
+
+.out .text_out {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 4rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.out .text_out h1 {
+    font-size: 50px;
+    font-weight: 1000;
+    color: white;
+}
+
+.out .text_out p {
+    color: white;
+    font-size: 13px;
+    margin-bottom: 1rem;
+}
+
+.out .text_out a {
+    padding: 1rem 2rem;
+    color: white;
+    background-color: #d43322;
+    font-size: 12px;
+    font-weight: 700;
+    border-radius: 10px;
+}
+
 @keyframes blurOut {
-    0%{
+    0% {
         backdrop-filter: blur(10px);
         opacity: 1;
     }
-    100%{
+
+    100% {
         backdrop-filter: blur(0);
         opacity: 0;
     }
 }
 
 @keyframes blur {
-    0%{
+    0% {
         backdrop-filter: blur(0px);
         opacity: 0;
     }
-    100%{
+
+    100% {
         backdrop-filter: blur(10px);
         opacity: 1;
     }
 }
 
 @media (height < 700px) {
-    body{
+    body {
         align-items: start;
         padding-top: 3rem;
         height: 100%;
@@ -399,13 +660,13 @@ body {
 }
 
 @media (width < 1000px) {
-    .container{
+    .container {
         width: 80%;
     }
 }
 
 @media (width < 700px) {
-    .container .top{
+    .container .top {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -415,12 +676,12 @@ body {
     }
 
     .container .content .top_content i:last-child,
-    .container .content .bottom_content i:last-child{
+    .container .content .bottom_content i:last-child {
         display: none;
     }
 
     .container .content .top_content,
-    .container .content .bottom_content{
+    .container .content .bottom_content {
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -429,14 +690,14 @@ body {
     }
 
     .container .content .top_content .text_top-content,
-    .container .content .bottom_content .text_bottom-content{
+    .container .content .bottom_content .text_bottom-content {
         margin-left: 0;
         margin-top: 1rem;
     }
 }
 
 @media (width < 400px) {
-    .container{
+    .container {
         width: 90%;
     }
 }
