--- a/views/personal.html
+++ b/views/personal.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cobros</title>
+        <title>Personal</title>
         <script src="https://unpkg.com/@phosphor-icons/web"></script>
         <link rel="stylesheet" href="/styles/personal.css">
         <script src="https://kit.fontawesome.com/460146b1b8.js"
@@ -217,7 +217,37 @@
             </div>
         </div>
 
-        <script src="/controller/personal.js"></script>
+        <div class="out">
+            <div class="fire">
+                <div class="fire-left">
+                    <div class="main-fire"></div>
+                    <div class="particle-fire"></div>
+                </div>
+                <div class="fire-center">
+                    <div class="main-fire"></div>
+                    <div class="particle-fire"></div>
+                </div>
+                <div class="fire-right">
+                    <div class="main-fire"></div>
+                    <div class="particle-fire"></div>
+                </div>
+                <div class="fire-bottom">
+                    <div class="main-fire"></div>
+                </div>
+            </div>
+            <div class="text_out">
+                <h1>Inicia sesion</h1>
+                <p>No has iniciado sesion de manera correcta</p>
+                <a href="/index.html">Iniciar sesion</a>
+            </div>
+        </div>
+    
+        <div class="toast">
+            <i class="fa-solid fa-triangle-exclamation fa-shake"></i>
+            <p class="p_toast"></p>
+        </div>
+
+        <script type="module" src="/controller/personal.js"></script>
     </body>
 
 </html>
