--- a/views/register_users.html
+++ b/views/register_users.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="/styles/register_user.css">
     <script src="https://kit.fontawesome.com/460146b1b8.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="cont">
         <h1>REGISTRAR</h1>
@@ -36,7 +38,7 @@
             <i class="fa-solid fa-earth-americas"></i>
             <input class="pais" type="text" id="pais" placeholder="Selecciona el pais" autocomplete="off">
         </div>
-        
+
         <br>
 
         <button class="login" type="button" href="/views/inside.html">Registrar</button>
@@ -113,6 +115,33 @@
             </div>
         </div>
     </div>
-<script src="/controller/register_user.js"></script>
+
+    <div class="out">
+        <div class="fire">
+            <div class="fire-left">
+                <div class="main-fire"></div>
+                <div class="particle-fire"></div>
+            </div>
+            <div class="fire-center">
+                <div class="main-fire"></div>
+                <div class="particle-fire"></div>
+            </div>
+            <div class="fire-right">
+                <div class="main-fire"></div>
+                <div class="particle-fire"></div>
+            </div>
+            <div class="fire-bottom">
+                <div class="main-fire"></div>
+            </div>
+        </div>
+        <div class="text_out">
+            <h1>Inicia sesion</h1>
+            <p>No has iniciado sesion de manera correcta</p>
+            <a href="/index.html">Iniciar sesion</a>
+        </div>
+    </div>
+
+    <script type="module" src="/controller/register_user.js"></script>
 </body>
+
 </html>
