--- a/styles/settings.css
+++ b/styles/settings.css
@@ -198,7 +198,7 @@ body {
     display: flex;
     align-items: end;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.124);
+    background-color: #00000020;
     backdrop-filter: blur(10px);
     animation: blurOut 1s forwards;
     transition: bottom 0.4s ease;
@@ -290,7 +290,7 @@ body {
     display: flex;
     align-items: end;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.393);
+    background-color: #00000020;
     backdrop-filter: blur(10px);
     transition: bottom 0.4s ease;
     animation: blurOut 1s forwards;
