--- a/views/inside.html
+++ b/views/inside.html
@@ -87,10 +87,10 @@
             <input type="text" placeholder="Busca por nombre, correo, estado...">
         </div>
         <div class="right_header">
-            <img src="/assets/admin.png" alt>
+            <img class="img_perfil" src="" alt>
             <div class="text_header">
-                <p>Hola, <span> Juan Martinez</span></p>
-                <h1>Administrador</h1>
+                <p>Hola, <span class="name"> </span></p>
+                <h1 class="rol"></h1>
             </div>
         </div>
     </div>
