--- a/styles/register_user.css
+++ b/styles/register_user.css
@@ -610,11 +610,11 @@ body {
     right: 0;
 }
 
-@media (height < 534px) {
+@media (height < 800px) {
     body {
         display: flex;
         align-items: start;
-        height: 100%;
+        height: 100vh;
     }
 
     .cont {
