Mostrar Usuarios, falta configuracion para cuando tiene mas de un servicio

--- a/views/inside.html
+++ b/views/inside.html
@@ -95,7 +95,7 @@
         </div>
     </div>
     <div class="default">
-        <table>
+        <table class="table">
             <thead>
                 <tr>
                     <th>Nombre</th>
@@ -105,79 +105,8 @@
                     <th>Estado</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <th>Pepito Perez</th>
-                    <th>Pepitoperez@gmail.com</th>
-                    <th>wnx@wnx.com</th>
-                    <th>
-                        <div class="servicios">
-                            <img src="/assets/logo_netflix.png" alt>
-                            <img src="/assets/logo_disney.jpg" alt="">
-                            <img src="/assets/logo_hbo.png" alt="">
-                        </div>
-                    </th>
-                    <th>
-                        <p class="activo">Activo</p>
-
-                    </th>
-                </tr>
-                <tr>
-                    <th>Pepito Perez</th>
-                    <th>Pepitoperez@gmail.com</th>
-                    <th>wnx@wnx.com</th>
-                    <th>
-                        <div class="servicio">
-                            <img src="/assets/logo_disney.jpg" alt="">
-                        </div>
-                    </th>
-                    <th>
-                        <p class="activo">Activo</p>
-                    </th>
-                </tr>
-                <tr>
-                    <th>Pepito Perez</th>
-                    <th>Pepitoperez@gmail.com</th>
-                    <th>wnx@wnx.com</th>
-                    <th>
-                        <div class="servicios">
-                            <img src="/assets/logo_netflix.png" alt>
-                            <img src="/assets/logo_disney.jpg" alt="">
-                            <img src="/assets/logo_hbo.png" alt="">
-                            <img src="/assets/logo_prime.png" alt="">
-                        </div>
-                    </th>
-                    <th>
-                        <p class="activo">Activo</p>
-                    </th>
-                </tr>
-                <tr>
-                    <th>Pepito Perez</th>
-                    <th>Pepitoperez@gmail.com</th>
-                    <th>wnx@wnx.com</th>
-                    <th>
-                        <div class="servicios">
-                            <img src="/assets/logo_netflix.png" alt>
-                            <img src="/assets/logo_disney.jpg" alt="">
-                        </div>
-                    </th>
-                    <th>
-                        <p class="activo">Activo</p>
-                    </th>
-                </tr>
-                <tr>
-                    <th>Pepito Perez</th>
-                    <th>Pepitoperez@gmail.com</th>
-                    <th>wnx@wnx.com</th>
-                    <th>
-                        <div class="servicio">
-                            <img src="/assets/logo_netflix.png" alt="">
-                        </div>
-                    </th>
-                    <th>
-                        <p id="estado" class="activo">Activo</p>
-                    </th>
-                </tr>
+            <tbody class="tbody">
+                
             </tbody>
         </table>
     </div>
