mostrar users and admins

--- a/views/personal.html
+++ b/views/personal.html
@@ -111,7 +111,7 @@
             <table>
                 <thead>
                     <tr>
-                        
+
                         <th>Foto</th>
                         <th>Nombre</th>
                         <th>Correo</th>
@@ -119,52 +119,8 @@
                         <th>Acciones</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <th><img class src="/assets/admin.png" alt></th>
-                        <th>Pepito Perez</th>
-                        <th>wnx@wnx.com</th>
-                        <th>7/11/2024</th>
-                        <th>
-                            <p class="inactivo">Eliminar</p>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th><img class src="/assets/admin.png" alt></th>
-                        <th>Pepito Perez</th>
-                        <th>wnx@wnx.com</th>
-                        <th>7/11/2024</th>
-                        <th>
-                            <p class="inactivo">Eliminar</p>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th><img class src="/assets/admin.png" alt></th>
-                        <th>Pepito Perez</th>
-                        <th>wnx@wnx.com</th>
-                        <th>7/11/2024</th>
-                        <th>
-                            <p class="inactivo">Eliminar</p>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th><img class src="/assets/admin.png" alt></th>
-                        <th>Pepito Perez</th>
-                        <th>wnx@wnx.com</th>
-                        <th>7/11/2024</th>
-                        <th>
-                            <p class="inactivo">Eliminar</p>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th><img class src="/assets/admin.png" alt></th>
-                        <th>Pepito Perez</th>
-                        <th>wnx@wnx.com</th>
-                        <th>7/11/2024</th>
-                        <th>
-                            <p class="inactivo">Eliminar</p>
-                        </th>
-                    </tr>
+                <tbody class="tbody">
+                    
                 </tbody>
             </table>
         </div>
