--- a/views/inside.html
+++ b/views/inside.html
@@ -101,6 +101,7 @@
                     <th>Nombre</th>
                     <th>Correo</th>
                     <th>Cuenta padre</th>
+                    <th>Telefono</th>
                     <th>Servicio</th>
                     <th>Estado</th>
                 </tr>
