--- a/views/payment.html
+++ b/views/payment.html
@@ -105,83 +105,13 @@
                     <th>Nombre</th>
                     <th>Correo</th>
                     <th>Cuenta padre</th>
+                    <th>Telefono</th>
                     <th>Servicio</th>
                     <th>Estado</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <th>Pepito Perez</th>
-                    <th>Pepitoperez@gmail.com</th>
-                    <th>wnx@wnx.com</th>
-                    <th>
-                        <div class="servicios">
-                            <img src="/assets/logo_netflix.png" alt>
-                            <img src="/assets/logo_disney.jpg" alt="">
-                            <img src="/assets/logo_hbo.png" alt="">
-                        </div>
-                    </th>
-                    <th>
-                        <p class="inactivo">Cobrar</p>
+            <tbody class="tbody">
 
-                    </th>
-                </tr>
-                <tr>
-                    <th>Pepito Perez</th>
-                    <th>Pepitoperez@gmail.com</th>
-                    <th>wnx@wnx.com</th>
-                    <th>
-                        <div class="servicio">
-                            <img src="/assets/logo_disney.jpg" alt="">
-                        </div>
-                    </th>
-                    <th>
-                        <p class="inactivo">Cobrar</p>
-                    </th>
-                </tr>
-                <tr>
-                    <th>Pepito Perez</th>
-                    <th>Pepitoperez@gmail.com</th>
-                    <th>wnx@wnx.com</th>
-                    <th>
-                        <div class="servicios">
-                            <img src="/assets/logo_netflix.png" alt>
-                            <img src="/assets/logo_disney.jpg" alt="">
-                            <img src="/assets/logo_hbo.png" alt="">
-                            <img src="/assets/logo_prime.png" alt="">
-                        </div>
-                    </th>
-                    <th>
-                        <p class="inactivo">Cobrar</p>
-                    </th>
-                </tr>
-                <tr>
-                    <th>Pepito Perez</th>
-                    <th>Pepitoperez@gmail.com</th>
-                    <th>wnx@wnx.com</th>
-                    <th>
-                        <div class="servicios">
-                            <img src="/assets/logo_netflix.png" alt>
-                            <img src="/assets/logo_disney.jpg" alt="">
-                        </div>
-                    </th>
-                    <th>
-                        <p class="inactivo">Cobrar</p>
-                    </th>
-                </tr>
-                <tr>
-                    <th>Pepito Perez</th>
-                    <th>Pepitoperez@gmail.com</th>
-                    <th>wnx@wnx.com</th>
-                    <th>
-                        <div class="servicio">
-                            <img src="/assets/logo_netflix.png" alt="">
-                        </div>
-                    </th>
-                    <th>
-                        <p class="inactivo" id="pay">Cobrar</p>
-                    </th>
-                </tr>
             </tbody>
         </table>
     </div>
