--- a/styles/payment.css
+++ b/styles/payment.css
@@ -715,6 +715,80 @@ table tbody tr th p.reserva {
     border-radius: 20%;
 }
 
+.select_fecha {
+    position: fixed;
+    bottom: -100vh;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    transition: all .5s ease;
+}
+
+.select_fecha.active {
+    bottom: 0;
+}
+
+.select_fecha .content_select-fecha {
+    background-color: var(--color-white);
+    box-shadow: var(--box-shadow);
+    width: 400px;
+    height: 500px;
+    border-radius: 20px 20px 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    flex-direction: column;
+    position: relative;
+}
+
+.select_fecha .content_select-fecha span {
+    display: block;
+    height: 5px;
+    width: 60px;
+    position: absolute;
+    background-color: var(--color-linea);
+    top: 30px;
+    border-radius: 100px;
+}
+
+.select_fecha .content_select-fecha h3 {
+    margin-bottom: 2rem;
+}
+
+.select_fecha .content_select-fecha .fechas {
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
+    margin-bottom: 2rem;
+}
+
+.select_fecha .content_select-fecha .fechas .fecha {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: .2rem;
+}
+
+.select_fecha .content_select-fecha .fechas .fecha p {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: solid 1px var(--color-linea);
+    color: var(--color-black);
+    cursor: pointer;
+    transition: all .2s ease;
+}
+
+.select_fecha .content_select-fecha .fechas .fecha p:hover {
+    background-color: var(--color-linea);
+    color: var(--color-grey);
+}
+
 .fire {
     position: absolute;
     top: calc(50% - 25px);
@@ -996,6 +1070,22 @@ table tbody tr th p.reserva {
 
 .toast.active {
     right: 0;
+}
+
+.date {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    height: 60px;
+    width: 60px;
+    font-size: 17px;
+    background-color: var(--color-linea);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: var(--color-grey);
+    cursor: pointer;
 }
 
 @media (width < 1300px) {
