--- a/views/payment.html
+++ b/views/payment.html
@@ -161,6 +161,58 @@
         </div>
     </div>
 
+    <div class="select_fecha">
+        <div class="content_select-fecha">
+            <span></span>
+            <h3>Selecciona una fecha: </h3>
+            <div class="fechas">
+                <div class="fecha">
+                    <p>01</p>
+                    <p>02</p>
+                    <p>03</p>
+                    <p>04</p>
+                    <p>05</p>
+                    <p>06</p>
+                </div>
+                <div class="fecha">
+                    <p>07</p>
+                    <p>08</p>
+                    <p>09</p>
+                    <p>10</p>
+                    <p>11</p>
+                    <p>12</p>
+                </div>
+                <div class="fecha">
+                    <p>13</p>
+                    <p>14</p>
+                    <p>15</p>
+                    <p>16</p>
+                    <p>17</p>
+                    <p>18</p>
+                </div>
+                <div class="fecha">
+                    <p>19</p>
+                    <p>20</p>
+                    <p>21</p>
+                    <p>22</p>
+                    <p>23</p>
+                    <p>24</p>
+                </div>
+                <div class="fecha">
+                    <p>25</p>
+                    <p>26</p>
+                    <p>27</p>
+                    <p>28</p>
+                    <p>29</p>
+                    <p>30</p>
+                </div>
+                <div class="fecha">
+                    <p>31</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="out">
         <div class="fire">
             <div class="fire-left">
@@ -190,6 +242,10 @@
         <i class="fa-solid fa-triangle-exclamation fa-shake"></i>
         <p class="p_toast"></p>
     </div>
+
+    <p class="date">
+        <i class="fa-solid fa-calendar-days"></i>
+    </p>
 
     <script type="module" src="/controller/payment.js"></script>
 </body>
