--- a/views/services.html
+++ b/views/services.html
@@ -108,77 +108,13 @@
                         <th>Nombre</th>
                         <th>Correo</th>
                         <th>Cuenta padre</th>
+                        <th>Fecha</th>
                         <th>Servicio</th>
                         <th>Estado</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <th>Pepito Perez</th>
-                        <th>Pepitoperez@gmail.com</th>
-                        <th>wnx@wnx.com</th>
-                        <th>
-                            <div class="servicio">
-                                <img src="/assets/logo_disney.jpg" alt>
-                            </div>
-                        </th>
-                        <th>
-                            <p class="activo">Activo</p>
+                <tbody class="tbody">
 
-                        </th>
-                    </tr>
-                    <tr>
-                        <th>Pepito Perez</th>
-                        <th>Pepitoperez@gmail.com</th>
-                        <th>wnx@wnx.com</th>
-                        <th>
-                            <div class="servicio">
-                                <img src="/assets/logo_disney.jpg" alt>
-                            </div>
-                        </th>
-                        <th>
-                            <p class="activo">Activo</p>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th>Pepito Perez</th>
-                        <th>Pepitoperez@gmail.com</th>
-                        <th>wnx@wnx.com</th>
-                        <th>
-                            <div class="servicio">
-                                <img src="/assets/logo_disney.jpg" alt>
-                            </div>
-                        </th>
-                        <th>
-                            <p class="activo">Activo</p>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th>Pepito Perez</th>
-                        <th>Pepitoperez@gmail.com</th>
-                        <th>wnx@wnx.com</th>
-                        <th>
-                            <div class="servicio">
-                                <img src="/assets/logo_disney.jpg" alt>
-                            </div>
-                        </th>
-                        <th>
-                            <p class="activo">Activo</p>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th>Pepito Perez</th>
-                        <th>Pepitoperez@gmail.com</th>
-                        <th>wnx@wnx.com</th>
-                        <th>
-                            <div class="servicio">
-                                <img src="/assets/logo_disney.jpg" alt>
-                            </div>
-                        </th>
-                        <th>
-                            <p id="estado" class="activo">Activo</p>
-                        </th>
-                    </tr>
                 </tbody>
             </table>
         </div>
